# t3io-weather-agent

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
scripts/: deploy-and-invoke.ts
src/: lib.rs  weather.rs
wit/: world.wit
