[package]
name = "z-tenant-weather"
version = "0.1.1"
edition = "2021"
description = "Weather agent TEE contract — calls OpenWeatherMap API from inside TDX enclave"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
